# ipet

./: .gitignore  AUTHORS.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
doc/source/: conf.py  scripts.rst
ipet/: Experiment.py  __init__.py
ipet/evaluation/: IPETEvalTable.py  IPETFilter.py
ipet/misc/: misc.py
ipet/parsing/: Solver.py  StatisticReader.py  StatisticReader_CustomHistoryReader.py  StatisticReader_DualBoundHistoryReader.py  StatisticReader_PrimalBoundHistoryReader.py  StatisticReader_VariableReader.py
ipet/validation/: Validation.py
scripts/: ipet-evaluate  ipet-parse
