[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ipet"
version = "1.1.0"
description = "Interactive Performance Evaluation Tools"
license = "MIT"
requires-python = ">= 3.11"
readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]

authors = [
  { name = "Zuse Institute Berlin", email = "hendel@zib.de" }
]

maintainers = [
  { name = "Zuse Institute Berlin", email = "hendel@zib.de" }
]

keywords = ["mathematical optimization", "solver", "log benchmark", "parser"]

urls = { "Homepage"= "https://github.com/scipopt/ipet" }

classifiers = [
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}

